# public_code

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .tmux.conf  LICENSE.txt  README.md  activations.py  create_module_tree.py  gpu_test.py  lint_check.sh  local_caching.py  monai_model_params.json  n_primes.py  pi_generator.py  profile_report.ipynb  pyproject.toml  ransac_simple.py  requirements.txt  search.py  search_text_in_subfolders.py  setup.cfg  unique_sum_set.py
activity_recognition/: README.md
config/: loss_params.json  monai_model_params.json  optimizer_params.json  transform_params.json
data_compression/: __init__.py  dct_compression.py  k_means_compression.py  k_medians_compression.py  main.py  orthonormal_compression.py  pyproject.toml
digital_signal_processing/: mouse_tracker_kalman.py
from_scratch/: README.md  a_star_pathfinder.py  artificial_neural_network_functions_only.py  artificial_neural_network_object_oriented.py  beam_search.py  breadth_first_search.py  cnn_classifier.py  decision_tree_classifier.py  depth_first_search.py  gradient_descent.py  hierachical_clustering.py  k_gaussian_mixture_clustering.py  k_gaussian_mixture_em.py  k_means_clustering.py  kalman_filter.py  linear_discriminant_analysis.py  linear_regression.py  linear_regression_ordinary.py  linear_regression_regularize.py  logistic_regression.py  logistic_regression_nd.py  main.py  mouse_tracker_kalman.py  mouse_tracker_unscented_kalman.py  polynomial_regression_lasso.py  principal_component_analysis.py  pyproject.toml  simple_greedy_partition.py  singular_value_decomposition.py  sorting.py  stochastic_gradient_descent.py  svm_classifier.py
from_scratch/modules/: distance_metrics.py  local_caching.py  loss_functions.py  main.py  model_performance_metrics.py  my_acivations.py  my_activations.py  my_classification_metrics.py  my_convolution_block.py  my_covariance.py  my_decorators.py  my_distance_metrics.py  my_helper_functions.py  my_image_features.py  my_image_processing_tools.py  my_image_quality_measures.py  my_information_measures.py  my_loss_functions.py  my_model_builder.py  my_odds2probability.py  my_segmentation_metrics.py  n_primes.py  pyproject.toml
gaussian_splatting/: README.md
image_processing/: README.md  __init__.py  angio_image_tests.py  auto_correlate_2d.py  bilateral_filter.py  images_to_textfiles.py  main.py  pdfs_to_textfiles.py  pyproject.toml  ransac_data.csv  ransac_simple.py  read_pdf_text.py
image_processing/modules/: image_features.py
image_segmentation/: README.md  image_segment_test.py
lightning/: transformer_torch_lightning.py
my_modules/: __init__.py  covariance.py  image_features.py  local_caching.py  main.py  my_acivations.py  my_activations.py  my_classification_metrics.py  my_convolution_block.py  my_covariance.py  my_decorators.py  my_distance_metrics.py  my_helper_functions.py  my_image_features.py  my_image_processing_tools.py  my_image_quality_measures.py  my_information_measures.py  my_kalman_filter.py  my_loss_functions.py  my_model_builder.py  my_odds2probability.py  my_segmentation_metrics.py  my_unscented_kalman_filter.py  n_primes.py  pyproject.toml  segmentation_metrics.py
nlp_and_language_models/: RNN.py  nlp_translate.py  rnn_text1.py  word_embedding.py  word_embedding_nb.ipynb
notebooks_ipython/: README.md  discussion_4_tensorflow.ipynb  (+6 more)
optical_flow/: README.md  main.py  my_horn_schunck_opflow_manual.py  my_lucas_kanade_opflow_manual.py  play_videos.py  pyproject.toml  video_tracker_lk_opflow_opencv.py
(+96 files in other folders)
