[project]
name = "project-preteen-wolverine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "db>=0.1.1",
    "gdown>=5.2.0",
    "gputil>=1.4.0",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "itk>=5.4.4",
    "lmdb>=1.6.2",
    "matplotlib>=3.10.3",
    "monai>=1.4.0",
    "nibabel>=5.3.2",
    "notebook>=7.4.3",
    "numba>=0.61.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pirt>=2.1.1",
    "psutil>=7.0.0",
    "pynrrd>=1.1.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "simpleitk>=2.5.2",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uv>=0.7.12",
    "visvis>=1.15.0",
    "wandb>=0.20.1",
]
[tool.black]
line-length = 119
