[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdcm>=1.1",
    "ipykernel>=6.29.5",
    "ipython>=8.37.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
    "pypdf>=5.6.0",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
]
