[project]
name = "my-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.3",
    "mouse>=0.7.1",
    "numba>=0.61.2",
    "opencv-python>=4.11.0.86",
    "pip>=25.1.1",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "uv>=0.7.14",
]
