[project]
name = "optical-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdcm>=1.1",
    "ipykernel>=6.29.5",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "opencv-python>=4.11.0.86",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
    "scipy>=1.15.3",
]
